addressing sonar smells